<resources>
    <string name="registro">Registro</string>

    <string name="pasword">Ingrese contraseña</string>
    <string name="nombre">Ingrese nombre</string>
    <string name="apellido">Ingrese apellido</string>
    <string name="erro_campo_obligario">campo obligario</string>
    <string name="NC">ingrese su numero celular</string>
    <string name="iniciar">Iniciar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="secretaa">Ingrese nombre primera mascota</string>
    <string name="app_name">ServiciosAUTOMOVIL</string>
    <string name="r">registrase</string>
    <string name="s">Siguiente</string>
    <string name="res">Reservaciones</string>
    <string name="man">Mantenimiento</string>
    <string name="vol">Atras</string>
    <string name="SAL">SALIR</string>
    <string name="mod">Modelos de autos</string>
    <string name="ate">Atencio al cliente</string>
    <string name="consejo">consejo</string>
    <string name="contc">contactos</string>
    <string name="NOMBRE">INGRESE NOMBRES Y APELLIDOS</string>
    <string name="CEDULA">INGRESE CEDULA</string>
    <string name="CORREO">INGRESE CORREO</string>
    <string name="datop">DATOS PERSONALES</string>
    <string name="NinSA">NINSA</string>
    <string name="MW">MW</string>
    <string name="FOR">ayuda</string>
    <string name="CHEV">servicios</string>
    <string name="REDUCS">REDUSCA LA VELOCIDAD</string>
    <string name="NOVEVA">EVITAR CONDUCIR CON BORRACHO</string>
    <string name="J">JOSESANCHEZ@GMAIL.COM</string>
    <string name="G">GILS@HOTAMIL.COM</string>
    <string name="Z">ANGEL@HOTMIAL.COM</string>
    <string name="A">ARGA@HOTMAIL.COM</string>
    <string name="VALIDAR">CONFIRMA  REGISTRO</string>
    <string name="HORA">HORA Y DIA DE RESERVACION</string>
    <string name="TIEMPO">Nombre del cliente</string>
    <string name="asss">Nombres</string>
    <string name="aacc">reclamos dia y hora</string>
    <string name="CHAS"> HACEMOS MANTENIMIENTO DE CHASIS</string>
    <string name="MOTOR">HACEMOS MANTENIMIENTO DE MOTOR</string>
    <string name="CARROSA">ARREGLAMOS CARROSAS</string>


    <string name="txtApellidos">Ingrese sus apellidos</string>
    <string name="txtUserRegistro">Ingrese nombre de Usuario</string>
    <string name="txtEmail">Ingrese su correo</string>
    <string name="txtPasswordRegistro">Ingrese una contraseña</string>
    <string name="txtPasswordVerificacion">Repita su contraseña</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnLogin">Ya tienes cuenta? Inicia sesión!</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="evLogin">Inicio de Sesión</string>
    <string name="txtUser">Nombre de Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="evPublicar">Registro de Evento</string>
    <string name="evtinformacion">Infomacion de EvenTime</string>
    <string name="btnPublicar">Publicar Evento</string>
    <string name="btnTomarFoto">Tomar foto</string>
    <string name="btnSubirFoto">Subir foto</string>
    <string name="evRegistrar">Registrate!</string>
    <string name="evRegistro">Registro de Usuario</string>
    <string name="txtNombres">Ingrese sus nombres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
